Clarify Maven configuration